# sphinx-codelinks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  pyproject.toml  tox.ini
.github/actions/setup_rye/: action.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  coverage.yaml  gh_pages.yml  release.yaml
docs/: conf.py  src_trace.toml  ubproject.toml
docs/source/: configuration.rst  index.rst
docs/source/_static/: furo.css
docs/source/basics/: installation.rst  introduction.rst  quickstart.rst  usage.rst
docs/source/components/: analyse.rst  cli.rst  configuration.rst  directive.rst  discover.rst  features.rst  oneline.rst  rst_parser.rst  write.rst
docs/source/development/: change_log.rst  contributing.rst  roadmap.rst  traceability.rst
src/sphinx_codelinks/: README.md  __init__.py  bridge.py  cmd.py  config.py  logger.py  needextend_bridge.py  needextend_write.py
src/sphinx_codelinks/analyse/: analyse.py  config.py  models.py  oneline_parser.py  projects.py  sn_rst.lark  sn_rst_parser.py  utils.py
src/sphinx_codelinks/analyzer/: analyzer.py  config.py  models.py  oneline_parser.py  utils.py
src/sphinx_codelinks/source_discover/: config.py  source_discover.py
src/sphinx_codelinks/source_discovery/: config.py  source_discover.py
src/sphinx_codelinks/sphinx_extension/: config.py  debug.py  html_wrapper.py  sn_rst.lark  sn_rst_parser.py  source_tracing.py  ub_sct.css
src/sphinx_codelinks/virtual_docs/: config.py  ubt_models.py  utils.py  virtual_docs.py
tests/: conftest.py  test_analyse.py  test_analyse_config.py  test_analyse_preproc.py  test_analyse_utils.py  test_analyzer.py  test_analyzer_utils.py  test_bridge.py  test_cmd.py  test_extraction_fixtures.py  test_libclang_optional.py  test_logger.py  test_needextend_write.py  test_oneline_parser.py  test_preproc_compile_db.py  test_preproc_config.py  test_preproc_libclang.py  test_rst_parser.py  test_schema_validation.py  test_source_discover.py  test_src_trace.py  test_virtual_docs.py
tests/__snapshots__/test_analyse/: test_analyse[src_dir0-src_paths0].anchors.json  test_analyse_rst[leading_asterisk_rst_marker].anchors.json  test_analyse_rst[leading_asterisks_rst_marker].anchors.json  test_analyse_rst[link_options_rst_marker].anchors.json  test_analyse_rst[multiline_rst_marker].anchors.json  test_analyse_rst[oneline_rst_marker].anchors.json  test_analyse_rst[warning_invalid_type].anchors.json
tests/__snapshots__/test_analyzer/: test_analyzer.anchors.json
tests/__snapshots__/test_extraction_fixtures/: test_extraction_fixture[custom_config-bracketed_defaults_applied].json  test_extraction_fixture[custom_config-bracketed_two_links].json  test_extraction_fixture[custom_config-space_separated].json  test_extraction_fixture[custom_config-space_separated_defaults_applied].json  test_extraction_fixture[escapes-escaped_backslash_in_str_field].json  test_extraction_fixture[escapes-escaped_brackets_in_list_item].json  test_extraction_fixture[escapes-escaped_comma_in_list_item].json  test_extraction_fixture[escapes-escaped_comma_in_str_field_default].json  test_extraction_fixture[extra_languages-default_oneliner_go].json  test_extraction_fixture[extra_languages-default_oneliner_jsonc].json  test_extraction_fixture[marked_rst-multi_line_rst_doxygen].json  test_extraction_fixture[marked_rst-single_line_rst].json  test_extraction_fixture[need_refs-custom_marker].json  test_extraction_fixture[need_refs-default_marker].json  test_extraction_fixture[need_refs-default_marker_python].json  test_extraction_fixture[oneline-default_oneliner_c].json  test_extraction_fixture[oneline-default_oneliner_cpp].json  test_extraction_fixture[oneline-default_oneliner_csharp].json  test_extraction_fixture[oneline-default_oneliner_python].json  test_extraction_fixture[oneline-default_oneliner_rust].json  test_extraction_fixture[oneline-default_oneliner_yaml].json  test_extraction_fixture[preproc_variants-variants_branching_libclang].json  test_extraction_fixture[preproc_variants-variants_branching_treesitter].json  test_extraction_fixture[warnings-missing_square_brackets].json  test_extraction_fixture[warnings-not_start_or_end_with_square_brackets].json  test_extraction_fixture[warnings-too_few_fields].json  test_extraction_fixture[warnings-too_many_fields].json
tests/__snapshots__/test_src_trace/: test_build_html[sphinx_project0-source_code0].doctree.xml  test_build_html[sphinx_project1-source_code1].doctree.xml  test_build_html[sphinx_project2-source_code2].doctree.xml  (+3 more)
tests/data/: discover_fixtures.json
tests/data/analyse/: default_config.toml  (+2 more)
tests/fixture_files/: analyse_rst.yml
(+73 files in other folders)
